--- a/scss/_page_2_timeline.scss
+++ b/scss/_page_2_timeline.scss
@@ -26,6 +26,10 @@ $dotColorAlt     : #FF9537;
   }
 }
 
+#W_timeline {
+  height : 300px;
+}
+
 #W_lgdTL, #W_lgdTLAlt {
 
   line-height  : 20px;
